--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,7 +1,7 @@
-$main: #4d71a9;
-$secondary: #f44336;
+$main: #fe0002;
+$secondary: #000;
 $text-color: #2c3e50;
-$gray: gray;
+$gray: #cccccc;
 
 $top-bar-height: 40px;
 
