--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,7 +1,8 @@
 $main: #fe0002;
-$secondary: #000;
-$text-color: #2c3e50;
+$secondary: #fff;
+$text-color: #fff;
 $gray: #cccccc;
+$bg: #000;
 
 $top-bar-height: 40px;
 
